--- a/assets/less/global/navigation.less
+++ b/assets/less/global/navigation.less
@@ -27,12 +27,20 @@
 			&:first-child {
 				border-left: 0;
 				padding-left: 3px;
+				.border-radius(3px 0 0 3px);
+				a {
+					.border-radius(3px 0 0 3px);
+				}
 			}
 			&:hover {
 				#gradient > .vertical(#fafafa, #cfcfcf);
 			}
 			&:last-child {
 				padding-right: 4px;
+				.border-radius(0 3px 3px 0);
+				a {
+					.border-radius(0 3px 3px 0);
+				}
 			}
 			a {
 				color: #595959;
@@ -54,28 +62,32 @@
 					background-image: url(../../img/nav/nav-sprites.png);
 				}
 			}
+			// Active Button State
 			&.active {
-				border-left: solid 1px #414141;
-				border-top: solid 1px #414141;
-				border-bottom: solid 1px #414141;
-		        -webkit-box-shadow: inset 0px 1px 5px 0px rgba(0, 0, 0, 54);
-		        -moz-box-shadow: inset 0px 1px 5px 0px rgba(0, 0, 0, 54);
-		        box-shadow: inset 0px 1px 5px 0px rgba(0, 0, 0, 54);
-		        background: #525252; /* Old browsers */
-				background: -moz-linear-gradient(top,  #525252 0%, #828282 100%); /* FF3.6+ */
-				background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#525252), color-stop(100%,#828282)); /* Chrome,Safari4+ */
-				background: -webkit-linear-gradient(top,  #525252 0%,#828282 100%); /* Chrome10+,Safari5.1+ */
-				background: -o-linear-gradient(top,  #525252 0%,#828282 100%); /* Opera 11.10+ */
-				background: -ms-linear-gradient(top,  #525252 0%,#828282 100%); /* IE10+ */
-				background: linear-gradient(top,  #525252 0%,#828282 100%); /* W3C */
-				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#525252', endColorstr='#828282',GradientType=0 ); /* IE6-9 */
+				position: relative;
+				top: -1px;
+				padding-top: 1px;
+				border: solid 1px #414141;
+				border-bottom: 0;
+		        -webkit-box-shadow: inset 0 -10px 1px -8px #808080,inset 0px 1px 5px rgba(0,0,0,0.44);
+		        -moz-box-shadow: inset 0 -10px 1px -8px #808080,inset 0px 1px 5px rgba(0,0,0,0.44);
+		        -o-box-shadow: inset 0 -10px 1px -8px #808080,inset 0px 1px 5px rgba(0,0,0,0.44);
+		        box-shadow: inset 0 -10px 1px -8px #808080,inset 0px 1px 5px rgba(0,0,0,0.44);
+		        #gradient > .vertical(#4d4d4d, #808080);
 				&:first-child {
 					border-left:0;
+					.border-radius(3px 0 0 3px);
+				}
+				&:last-child {
+					.border-radius(0 3px 3px 0);
+				}
+				&+li {
+					border-left: 0;
 				}        	
 				a {
-					color: #dadada;	
-			        text-shadow: 0px 1px 0px #000000;
-			        filter: dropshadow(color=#000000, offx=0, offy=1);
+					color: #f2f2f2;	
+			        text-shadow: 0px 1px 1px #000000;
+			        padding-top: 9px;
 			        i {
 			        	background-image:url(../../img/nav/nav-active-sprites.png);
 			        }
@@ -107,9 +119,7 @@
 			i {background-position: 0 -75px;}
 			&:hover i {background-position: 0 0;}
 		}
-		
 		// Active states
-		
 		.tv.active a {
 			i {background-position: 0 -180px;}
 		}
@@ -127,82 +137,117 @@
 		.appliances.active a {
 			i {background-position: 0 0}
 		}
-	}
-	// SUB NAVIGATION
-	// --------------------------------------------------
-	
-	#subnav {
-		display:none;
-		background-image:url(../../img/nav/subnav-bg.jpg);
-		background-repeat: repeat;
-		top: -20px;
-		position: relative;
-		z-index: 1;
-		-webkit-box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, .5);
-		-moz-box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, .5);
-		box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, .5);
-		.container {
-			padding: 40px 0 20px 0;
-			h2 {
-				margin-bottom: 20px;
-				font-weight: 900;
-				color: #262626;
-				font-size: 32px;
-				text-shadow: 0px 1px 0px #5d5d5d;
-				filter: dropshadow(color=#5d5d5d, offx=0, offy=1);
-
-			}
-		}
-		a {
-			color: #fff;
-			text-shadow: 0px 1px 1px #000;
-			filter: dropshadow(color=#000, offx=0, offy=1);
-			font-size: 13px;
-			&.nav-title {
-				font-size: 14px;
-				font-weight: bold;
-				text-transform: uppercase;
-			}
-		}
-		.nav-content {
-			width: 720px;
-			float: left;
-			border-right: 1px solid rgba(0,0,0,0.4);
-			-webkit-box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.1);
-			-moz-box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.1);
-			box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.1);
-		}
-		.nav-marketing {
-			width: 200px;
-			float: right;
-			display:none;
-			.nav-messaging {
-				background-color:#FFF;
-				display: inline-block;
-				width: 180px;
-				height: 220px;
-				position: absolute;
-				top: 50%;
-				margin-top: -100px;
-			}
-		}
-		.nav-column {
-			width: 160px;
-			float: left;
-			padding-right: 25px;
-			&:last-child {
-				padding-right: 0;
-			}
-			ul {
-				margin: 0;
-			}
-			li {
-				list-style: none;
-			}
-		}
-		#tv, #audio {
-			display: none;
-		}
 	}	
 }
 
+// SUB NAVIGATION
+// --------------------------------------------------
+
+#submenu {
+	// initially hidden
+	display:none;
+	// linen bg
+	background-image:url(../../img/nav/submenu-bg.jpg);
+	background-repeat: repeat;
+	top: -20px;
+	position: relative;
+	z-index: 1;
+	text-shadow: 0 2px 1px rgba(0,0,0,0.5);
+	.box-shadow(inset 0 0 15px @black);
+	border-bottom: 2px solid @white;
+	margin-bottom: -50px;
+	color: @white;
+	a {
+		color: @white;
+	}
+	.container {
+		padding: 40px 0 20px 0;
+		position: relative;
+		// initially hidden
+		display: none;
+	}
+	// Facilitate divider (background) between links section and marketing section
+	.row {
+		background: url(../../img/nav/submenu-div.png) repeat-y top right;
+		width: 760px;
+	}
+	// Category Title
+	h2 {
+		margin-bottom: 20px;
+		font-weight: 900;
+		color: @menuInset;
+		font-size: 32px;
+		text-shadow: 0px 1px 0px rgba(255,255,255,0.12);
+		text-transform: uppercase;
+	}
+	// Secondary links
+	.secondary-links {
+		float: right;
+		margin-right: 20px;
+		margin-top: 3px;
+		ul {
+			float: right;
+			.border-radius(3px);
+			background: @menuInset;
+			list-style: none;
+			height: 25px;
+			padding: 8px 15px 0;
+			margin: 0;
+			border-bottom: 1px solid rgba(255,255,255,0.18);
+			.box-shadow(inset 0 1px 1px rgba(0,0,0,0.4);
+			li {
+				float: left;
+				margin-right: 25px;
+				line-height: 14px;
+				&:last-child {
+					margin-right: 0;
+				}
+				a {
+					font-weight: bold;
+					color: #d9d9d9;
+				}
+			}
+		}
+	}
+	// Subcategory Title
+	h3 {
+		line-height: 18px;
+		text-transform: uppercase;
+		margin-bottom: 5px;
+		a {
+			font-size: 14px;
+		}
+	}
+	// Tertiary Link Columns
+	.span2 {
+		// custom grid widths
+		width: 160px !important;
+		ul {
+			margin: 0;
+			line-height: 20px;
+			list-style: none;
+		}
+	}
+	// Tertiary links color
+	.tertiary a {
+		color: #d9d9d9;
+	}
+	// Marketing column
+	.marketing {
+		// Custom grid width
+		width: 180px !important;
+		margin-left: 20px;
+		// initially hidden
+		display: none;
+		// Ad area
+		.ad-zone {
+			background-color: rgba(0,0,0,0.08);
+			color: #a6a6a6;
+			text-shadow: none;
+			padding: 20px;	
+			.border-radius(4px);
+			text-align: center;
+			margin-top: 5px;
+		}
+	}
+}
