--- a/assets/css/global/style.css
+++ b/assets/css/global/style.css
@@ -1511,6 +1511,26 @@ i:last-child {
 .icon-resize-horizontal {
   background-position: -456px -118px;
 }
+.secondary-links a i {
+  background-image: url(../../img/nav/submenu-secondary-icons.png);
+  height: 19px;
+  margin-right: 8px;
+  position: relative;
+}
+.secondary-links a.toprated i {
+  width: 19px;
+  background-position: -34px 0px;
+  top: -1px;
+}
+.secondary-links a.new i {
+  width: 32px;
+  background-position: 0px 0px;
+}
+.secondary-links a.clearance i {
+  width: 21px;
+  height: 20px;
+  background-position: 0px -21px;
+}
 .dropdown {
   position: relative;
 }
@@ -3768,6 +3788,14 @@ header {
 #primary .menubar li:first-child {
   border-left: 0;
   padding-left: 3px;
+  -webkit-border-radius: 3px 0 0 3px;
+  -moz-border-radius: 3px 0 0 3px;
+  border-radius: 3px 0 0 3px;
+}
+#primary .menubar li:first-child a {
+  -webkit-border-radius: 3px 0 0 3px;
+  -moz-border-radius: 3px 0 0 3px;
+  border-radius: 3px 0 0 3px;
 }
 #primary .menubar li:hover {
   background-color: #e9e9e9;
@@ -3782,6 +3810,14 @@ header {
 }
 #primary .menubar li:last-child {
   padding-right: 4px;
+  -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
+}
+#primary .menubar li:last-child a {
+  -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
 }
 #primary .menubar li a {
   color: #595959;
@@ -3804,44 +3840,43 @@ header {
   background-image: url(../../img/nav/nav-sprites.png);
 }
 #primary .menubar li.active {
-  border-left: solid 1px #414141;
-  border-top: solid 1px #414141;
-  border-bottom: solid 1px #414141;
-  -webkit-box-shadow: inset 0px 1px 5px 0px #000000;
-  -moz-box-shadow: inset 0px 1px 5px 0px #000000;
-  box-shadow: inset 0px 1px 5px 0px #000000;
-  background: #525252;
-  /* Old browsers */
-
-  background: -moz-linear-gradient(top, #525252 0%, #828282 100%);
-  /* FF3.6+ */
-
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #525252), color-stop(100%, #828282));
-  /* Chrome,Safari4+ */
-
-  background: -webkit-linear-gradient(top, #525252 0%, #828282 100%);
-  /* Chrome10+,Safari5.1+ */
-
-  background: -o-linear-gradient(top, #525252 0%, #828282 100%);
-  /* Opera 11.10+ */
-
-  background: -ms-linear-gradient(top, #525252 0%, #828282 100%);
-  /* IE10+ */
-
-  background: linear-gradient(top, #525252 0%, #828282 100%);
-  /* W3C */
-
-  filter: progid:dximagetransform.microsoft.gradient(startColorstr='#525252', endColorstr='#828282', GradientType=0);
-  /* IE6-9 */
-
+  position: relative;
+  top: -1px;
+  padding-top: 1px;
+  border: solid 1px #414141;
+  border-bottom: 0;
+  -webkit-box-shadow: inset 0 -10px 1px -8px #808080, inset 0px 1px 5px rgba(0, 0, 0, 0.44);
+  -moz-box-shadow: inset 0 -10px 1px -8px #808080, inset 0px 1px 5px rgba(0, 0, 0, 0.44);
+  -o-box-shadow: inset 0 -10px 1px -8px #808080, inset 0px 1px 5px rgba(0, 0, 0, 0.44);
+  box-shadow: inset 0 -10px 1px -8px #808080, inset 0px 1px 5px rgba(0, 0, 0, 0.44);
+  background-color: #616161;
+  background-image: -moz-linear-gradient(top, #4d4d4d, #808080);
+  background-image: -ms-linear-gradient(top, #4d4d4d, #808080);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#4d4d4d), to(#808080));
+  background-image: -webkit-linear-gradient(top, #4d4d4d, #808080);
+  background-image: -o-linear-gradient(top, #4d4d4d, #808080);
+  background-image: linear-gradient(top, #4d4d4d, #808080);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#4d4d4d', endColorstr='#808080', GradientType=0);
 }
 #primary .menubar li.active:first-child {
   border-left: 0;
+  -webkit-border-radius: 3px 0 0 3px;
+  -moz-border-radius: 3px 0 0 3px;
+  border-radius: 3px 0 0 3px;
+}
+#primary .menubar li.active:last-child {
+  -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
+}
+#primary .menubar li.active + li {
+  border-left: 0;
 }
 #primary .menubar li.active a {
-  color: #dadada;
-  text-shadow: 0px 1px 0px #000000;
-  filter: dropshadow(color=#000000, offx=0, offy=1);
+  color: #f2f2f2;
+  text-shadow: 0px 1px 1px #000000;
+  padding-top: 9px;
 }
 #primary .menubar li.active a i {
   background-image: url(../../img/nav/nav-active-sprites.png);
@@ -3900,78 +3935,107 @@ header {
 #primary .menubar .appliances.active a i {
   background-position: 0 0;
 }
-#primary #subnav {
+#submenu {
   display: none;
-  background-image: url(../../img/nav/subnav-bg.jpg);
+  background-image: url(../../img/nav/submenu-bg.jpg);
   background-repeat: repeat;
   top: -20px;
   position: relative;
   z-index: 1;
-  -webkit-box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
-  box-shadow: inset 0px 0px 15px 0px rgba(0, 0, 0, 0.5);
+  text-shadow: 0 2px 1px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0 0 15px #000000;
+  -moz-box-shadow: inset 0 0 15px #000000;
+  box-shadow: inset 0 0 15px #000000;
+  border-bottom: 2px solid #ffffff;
+  margin-bottom: -50px;
+  color: #ffffff;
 }
-#primary #subnav .container {
+#submenu a {
+  color: #ffffff;
+}
+#submenu .container {
   padding: 40px 0 20px 0;
+  position: relative;
+  display: none;
 }
-#primary #subnav .container h2 {
+#submenu .row {
+  background: url(../../img/nav/submenu-div.png) repeat-y top right;
+  width: 760px;
+}
+#submenu h2 {
   margin-bottom: 20px;
   font-weight: 900;
-  color: #262626;
+  color: #363636;
   font-size: 32px;
-  text-shadow: 0px 1px 0px #5d5d5d;
-  filter: dropshadow(color=#5d5d5d, offx=0, offy=1);
-}
-#primary #subnav a {
-  color: #fff;
-  text-shadow: 0px 1px 1px #000;
-  filter: dropshadow(color=#000000, offx=0, offy=1);
-  font-size: 13px;
-}
-#primary #subnav a.nav-title {
-  font-size: 14px;
-  font-weight: bold;
+  text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.12);
   text-transform: uppercase;
 }
-#primary #subnav .nav-content {
-  width: 720px;
-  float: left;
-  border-right: 1px solid rgba(0, 0, 0, 0.4);
-  -webkit-box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.1);
-  -moz-box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.1);
-  box-shadow: 1px 0px 0px 0px rgba(255, 255, 255, 0.1);
-}
-#primary #subnav .nav-marketing {
-  width: 200px;
+#submenu .secondary-links {
   float: right;
-  display: none;
+  margin-right: 20px;
+  margin-top: 3px;
 }
-#primary #subnav .nav-marketing .nav-messaging {
-  background-color: #FFF;
-  display: inline-block;
-  width: 180px;
-  height: 220px;
-  position: absolute;
-  top: 50%;
-  margin-top: -100px;
-}
-#primary #subnav .nav-column {
-  width: 160px;
-  float: left;
-  padding-right: 25px;
-}
-#primary #subnav .nav-column:last-child {
-  padding-right: 0;
-}
-#primary #subnav .nav-column ul {
+#submenu .secondary-links ul {
+  float: right;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  background: #363636;
+  list-style: none;
+  height: 25px;
+  padding: 8px 15px 0;
   margin: 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.18);
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.4);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.4);
 }
-#primary #subnav .nav-column li {
+#submenu .secondary-links ul li {
+  float: left;
+  margin-right: 25px;
+  line-height: 14px;
+}
+#submenu .secondary-links ul li:last-child {
+  margin-right: 0;
+}
+#submenu .secondary-links ul li a {
+  font-weight: bold;
+  color: #d9d9d9;
+}
+#submenu h3 {
+  line-height: 18px;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+}
+#submenu h3 a {
+  font-size: 14px;
+}
+#submenu .span2 {
+  width: 160px !important;
+}
+#submenu .span2 ul {
+  margin: 0;
+  line-height: 20px;
   list-style: none;
 }
-#primary #subnav #tv,
-#primary #subnav #audio {
+#submenu .tertiary a {
+  color: #d9d9d9;
+}
+#submenu .marketing {
+  width: 180px !important;
+  margin-left: 20px;
   display: none;
+}
+#submenu .marketing .ad-zone {
+  background-color: rgba(0, 0, 0, 0.08);
+  color: #a6a6a6;
+  text-shadow: none;
+  padding: 20px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  text-align: center;
+  margin-top: 5px;
 }
 .about-vdc {
   color: #b3b3b3;
