--- a/assets/less/global/lib/sprites.less
+++ b/assets/less/global/lib/sprites.less
@@ -153,3 +153,28 @@ i {
 .icon-folder-open        { background-position: -408px -120px; }
 .icon-resize-vertical    { background-position: -432px -119px; }
 .icon-resize-horizontal  { background-position: -456px -118px; }
+
+
+// Submenu Secondary icons
+.secondary-links a {
+	i {
+		background-image: url(../../img/nav/submenu-secondary-icons.png);
+		height: 19px;
+		margin-right: 8px;
+		position: relative;
+	}
+	&.toprated i {
+		width: 19px;
+		background-position: -34px 0px;
+		top: -1px;
+	}
+	&.new i {
+		width: 32px;
+		background-position: 0px 0px;
+	}
+	&.clearance i {
+		width: 21px;
+		height: 20px;
+		background-position: 0px -21px;
+	}
+}
