--- a/assets/less/global/lib/variables.less
+++ b/assets/less/global/lib/variables.less
@@ -35,6 +35,8 @@
 @pink:                  #c3325f;
 @purple:                #7a43b6;
 
+@menuInset:				#363636;
+
 // Typography
 @baseFontSize:          13px;
 @baseFontFamily:        "Helvetica Neue", Helvetica, Arial, sans-serif;
