--- a/assets/less/global/lib/sprites.less
+++ b/assets/less/global/lib/sprites.less
@@ -155,6 +155,71 @@ i {
 .icon-resize-horizontal  { background-position: -456px -118px; }
 
 
+// Nav sprites
+// -----------------------
+.menubar {	
+	// TV & Video
+	.tv {
+		a {
+			i {background-position: 0 -1275px;}
+			&:hover i {background-position: 0 -1200px;}
+		}
+		&.active a {
+			i {background-position: 0 -1125px;}
+		}
+	}
+	// Home Audio
+	.audio {
+		a {
+			i {background-position: 0 -825px;}
+			&:hover i {background-position: 0 -750px;}
+		}
+		&.active a {
+			i {background-position: 0 -675px;}
+		}
+	}
+	// Portable & Headphones
+	.portable {
+		a {
+			i {	background-position: 0 -1050px;}
+			&:hover i {background-position: 0 -975px;}
+		}
+		&.active a {
+			i {	background-position: 0 -900px;}
+		}
+	}
+	// Computers
+	.computers {
+		a {
+			i {	background-position: 0 -600px;}
+			&:hover i {background-position: 0 -525px;}
+		}
+		&.active a {
+			i {	background-position: 0 -450px;}
+		}
+	}
+	// Cameras & Camcorders
+	.cameras {
+		a {
+			i {background-position: 0 -375px;}
+			&:hover i {background-position: 0 -300px;}
+		}
+		&.active a {
+			i {background-position: 0 -225px;}
+		}
+	}
+	// Appliances
+	.appliances {
+		a {
+			i {background-position: 0 -150px;}
+			&:hover i {background-position: 0 -75px;}
+		}
+		&.active a {
+			i {background-position: 0 0}
+		}
+	}
+}
+
 // Submenu Secondary icons
 .secondary-links a {
 	i {
