--- a/assets/less/areas/result-set.less
+++ b/assets/less/areas/result-set.less
@@ -235,14 +235,14 @@ ul.filters {
   		width: 34px;
   		display: block;
   		text-indent: -9999px;
-  		margin: 10px auto;
+  		margin: 0 auto 10px;
   		&.selected {
   			background: url('../../img/result-set/result-set-filter-active.png') 0px 0px no-repeat;
   		}
   	}
   	a {
   		cursor: default;
-  		padding: 0 15px;
+  		padding: 10px 15px 7px;
   		display: block;
   		color: @grayDark;
   		&:hover {
