--- a/assets/less/global/navigation.less
+++ b/assets/less/global/navigation.less
@@ -132,7 +132,7 @@
 	margin-bottom: -50px;
 	color: @white;
 	.clearfix();
-	padding: 40px 0 30px 0;
+	padding: 40px 0 20px 0;
 	&.open {
 		-webkit-transition-duration: 150ms;
 	}
@@ -201,7 +201,7 @@
 		// custom grid widths
 		width: 160px !important;
 		ul {
-			margin: 0;
+			margin: 0 0 10px;
 			line-height: 20px;
 			list-style: none;
 		}
@@ -227,5 +227,25 @@
 			text-align: center;
 			margin-top: 5px;
 		}
+	}
+}
+// Close button at bottom of submenu
+.close-menu {
+	background-color: #b2b2b2;
+	color: @white;
+	border: 1px solid #a5a5a5;
+	//border-top: 0;
+	padding: 0 6px;
+	font-size: 11px;
+	line-height: 17px;
+	text-shadow: 0 1px 0 rgba(0,0,0,0.25);
+	height: 18px;
+	position: absolute;
+	bottom: -40px;
+	right: 0;
+	.border-radius(0 0 3px 3px);
+	-webkit-transition-duration: 0;
+	span {
+		font-size: 9px;
 	}
 }
