--- a/assets/css/global/style.css
+++ b/assets/css/global/style.css
@@ -3967,7 +3967,7 @@ header {
   margin-bottom: -50px;
   color: #ffffff;
   *zoom: 1;
-  padding: 40px 0 30px 0;
+  padding: 40px 0 20px 0;
 }
 #submenu:before,
 #submenu:after {
@@ -4052,7 +4052,7 @@ header {
   width: 160px !important;
 }
 #submenu .span2 ul {
-  margin: 0;
+  margin: 0 0 10px;
   line-height: 20px;
   list-style: none;
 }
@@ -4074,6 +4074,26 @@ header {
   border-radius: 4px;
   text-align: center;
   margin-top: 5px;
+}
+.close-menu {
+  background-color: #b2b2b2;
+  color: #ffffff;
+  border: 1px solid #a5a5a5;
+  padding: 0 6px;
+  font-size: 11px;
+  line-height: 17px;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25);
+  height: 18px;
+  position: absolute;
+  bottom: -40px;
+  right: 0;
+  -webkit-border-radius: 0 0 3px 3px;
+  -moz-border-radius: 0 0 3px 3px;
+  border-radius: 0 0 3px 3px;
+  -webkit-transition-duration: 0;
+}
+.close-menu span {
+  font-size: 9px;
 }
 .about-vdc {
   color: #b3b3b3;
